example-app/KubeFiles/ingress-azure/ingress-nginx-example.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/rewrite-target: /$2   #new 
  name: example-app
  namespace: example-app
spec:
  tls:
  - hosts:
    - nikhils.cloud
    secretName: nick-tls-secret
  rules:
  - host: nikhils.cloud
    http:
      paths:
      - pathType: Prefix
        path: /v2(/|$)(.*)
        backend:
          service:
            name: example-service
            port: 
              number: 2002
